--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "eslint": "7.29.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0"
   }
 }
