feat(image upload): add image upload functionality

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -31,5 +31,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "redditcloneimages": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
