--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-hook-form": "^7.9.0"
   },
   "devDependencies": {
